SVY-16428 [NG2] Combobox with height 20 does not have text centered fix combobox`s text alignment Also fix height of calendar`s span height

--- a/projects/bootstrapcomponents/svy_bootstrapcomponents.css
+++ b/projects/bootstrapcomponents/svy_bootstrapcomponents.css
@@ -72,6 +72,9 @@
 {
     width : 100%;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
   
 .svy-wrapper > * > .bts-combobox-container {
@@ -86,6 +89,10 @@
   
 .svy-wrapper > * > .bts-calendar-container {
     width : 100%;
+    height: 100%;
+}
+
+.svy-wrapper > * > .bts-calendar-container .input-group-append {
     height: 100%;
 }
 
@@ -165,7 +172,7 @@
 
 .bts-dropdown::after {
     float: right;
-    margin-top: 8px;
+    margin-top: initial;
 }
 
 .bts-dropdown {
